--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -132,7 +132,10 @@
     padding-left: 0;
     padding-right: 0;
   }
-
+  .contactaboutItems {
+  flex-direction: column;
+  gap: 50px;
+}
 }
 
 /* contact css for full screen */
@@ -151,8 +154,8 @@
   color: var(--color-text);
   display: flex;
   justify-content: space-around;
-  flex-direction: column;
-  gap: 50px;
+/*   flex-direction: column;
+  gap: 50px; */
 }
 .contactaboutItem {
   display: flex;
