--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -108,7 +108,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .copyButton{
+  button .copyButton{
     visibility:hide;
   }
   .container {
@@ -284,7 +284,7 @@ button .copyButton{
   background-color: transparent;
   height: 10px;
   width: 30px;
-  visibility: show;
+  visibility: visible;
 }
 
 img.copyimg{
